--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -60,7 +60,11 @@ Vagrant.configure("2") do |config|
       sudo service mongodb restart
 
       # Node.js
-      
+      curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
+      curl -sL https://deb.nodesource.com/setup_8.x | sudo bash -
+      sudo apt install nodejs
+
+      # Testing tools:
       # Nose.tools for testing Python
 
       echo "==================================================================="
