--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -4,8 +4,10 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-16.04"
   config.vm.synced_folder "~/", "/host_home", type: "virtualbox"
-  config.vm.synced_folder "../../Backend", "/backend"
-  config.vm.synced_folder "../../Frontend", "/frontend"
+  backend = ENV['BACKEND'] || "../../Backend"
+  frontend = ENV['FRONTEND'] || "../../Frontend"
+  config.vm.synced_folder backend, "/backend"
+  config.vm.synced_folder frontend, "/frontend"
 
   # For the webserver
   config.vm.network "forwarded_port", guest: 9000, host: 8080
