--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-  web:
+  backend-app:
     build: 
       context: ./backend
       dockerfile: Dockerfile
-    command: python -u app.py
+    command: python -u app/app.py
     ports:
       - "5000:5000"
     volumes:
@@ -13,4 +13,14 @@ services:
       - db
   db:
     image: mongo
+  frontend-app:
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    command: npm start
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/frontend-app
+      - /frontend-app/node_modules
   
