--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,12 @@ services:
     links:
       - db
   
-  
   db:
-    image: mongo
-  
+    build: 
+      context: ./database
+      dockerfile: Dockerfile
+    volumes:
+      - ./database/testdata:/testdata
+
 
 
