--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -7,11 +7,14 @@ Vagrant.configure("2") do |config|
   backend = ENV['BACKEND'] || "../../Backend"
   frontend = ENV['FRONTEND'] || "../../Frontend"
   database = ENV['FRONTEND'] || "../../Database"
+  helgeapi = ENV['HELGE-API'] || "../../Helge-api"
+  
   
   config.vm.synced_folder "../../Backend", "/app/backend"
   config.vm.synced_folder "../", "/app"
   config.vm.synced_folder "../../Frontend", "/app/frontend"
   config.vm.synced_folder "../../Database", "/app/database"
+  config.vm.synced_folder "../../Helge-api", "/app/helge-api"
 
   # For the webserver
   config.vm.network "forwarded_port", guest: 3000, host: 9000
