--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./frontend:/frontend-app
       - /frontend-app/node_modules
     links:
-      - db
+      - database
       - backend-app
   
   backend-app:
@@ -25,9 +25,9 @@ services:
     volumes:
       - ./backend:/app
     links:
-      - db
+      - database
   
-  db:
+  database:
     build: 
       context: ./database
       dockerfile: Dockerfile
