--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: '3.5'
 services:
+  
+  helge-api:
+    build: 
+      context: ./helge-api
+      dockerfile: Dockerfile
+    command: python app/helge-api.py  
+    ports:
+      - "5001:5001"
+    volumes:
+      - ./helge-api:/app
+    links:
+      - database  
 
   frontend-app:
     build: 
@@ -12,14 +24,13 @@ services:
       - ./frontend:/frontend-app
       - /frontend-app/node_modules
     links:
-      - database
       - backend-app
   
   backend-app:
     build: 
       context: ./backend
       dockerfile: Dockerfile
-    command: python -u app/app.py
+    command: python -u app/api.py
     ports:
       - "5000:5000"
     volumes:
@@ -33,15 +44,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./database/testdata:/testdata
-   
-  helge-api:
-    build: 
-      context: ./helge-api
-      dockerfile: Dockerfile
-    command: python -u app/api.py
-    ports:
-      - "5001:5001"
-    volumes:
-      - ./helge-api:/app
-    links:
-      - backend-app
+
+  #rabbitmq:
+  #  image: rabbitmq
+  #  ports:
+  #    - 5672
