--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - backend-app
       - database  
       - rabbitmq
+    networks:
+      - hackernews_ops
 
   frontend-app:
     image: hnclonecphb/frontend
@@ -19,16 +21,22 @@ services:
     links:
       - database
       - backend-app
+    networks:
+      - hackernews_ops
   
   backend-app:
-    image: hnclonecphb/backend
+    image: hnclonecphb/backend:master
     ports:
       - 5000:5000
     links:
-      - database 
+      - database
+    networks:
+      - hackernews_ops
 
   database:
     image: hnclonecphb/database
+    networks:
+      - hackernews_ops
 
   rabbitmq:
     image: rabbitmq
@@ -36,3 +44,10 @@ services:
       - RABBITMQ_DEFAULT_VHOST=rabbitmq_vhost
     ports:
       - 5672:5672
+    networks:
+      - hackernews_ops
+
+networks:
+  hackernews_ops:
+    name: hackernews_ops
+    driver: bridge
