--- a/vm/Vagrantfile
+++ b/vm/Vagrantfile
@@ -6,15 +6,16 @@ Vagrant.configure("2") do |config|
   #config.vm.synced_folder "~/", "/host_home", type: "virtualbox"
   backend = ENV['BACKEND'] || "../../Backend"
   frontend = ENV['FRONTEND'] || "../../Frontend"
-  database = ENV['FRONTEND'] || "../../Database"
+  database = ENV['DATABASE'] || "../../Database"
   helgeapi = ENV['HELGE-API'] || "../../Helge-api"
-  
+  helgeapi = ENV['RABBITMQ'] || "../../Rabbitmq"
   
   config.vm.synced_folder "../../Backend", "/app/backend"
   config.vm.synced_folder "../", "/app"
   config.vm.synced_folder "../../Frontend", "/app/frontend"
   config.vm.synced_folder "../../Database", "/app/database"
   config.vm.synced_folder "../../Helge-api", "/app/helge-api"
+  config.vm.synced_folder "../../Rabbitmq", "/app/rabbitmq"
 
   # For the webserver
   config.vm.network "forwarded_port", guest: 3000, host: 9000
