--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
   rabbitmq:
     image: hnclonecphb/rabbitmq-docker:master
     deploy:
-      replicas: 3 5
+      replicas: 3
       restart_policy:
         condition: on-failure
     ports:
